--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example</title>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1>Home Page </h1>
-        
-        <p>Click <a th:href="@{/dashboard}">here</a> to see the dashboard.</p>
-        <p>Click <a th:href="@{/login}">here</a> to login.</p>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+    <title>Spring Security Example</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+</head>
+<body>
+<h1>Home Page </h1>
+
+<hr/>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out" class="btn btn-info" />
+</form>
+<h3 th:inline="text">You are logged in as: [[${#httpServletRequest.remoteUser}]]!</h3>
+
+<br/><br/>
+<ul>
+    <li>View <a th:href="@{/dashboard}"><b>dashboard</b></a></li>
+    <li>View <a th:href="@{/info}"><b>info</b></a></li>
+    <li>-------------</li>
+    <li>View <a th:href="@{/actuator}"><b>actuator</b></a></li>
+    <li>View <a th:href="@{/actuator/health}"><b>actuator health</b></a></li>
+
+</ul>
+
+</body>
 </html>
